[project]
name = "pyprycd"
version = "0.0.1"
authors = [
  { name="Charles Givre", email="charles@geniza.ai" },
]
description = "A small library for interacting with PRYCD's Real Estate Analysis APIs."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/geniza-ai/pyprycd"
Issues = "https://github.com/geniza-ai/pyprycd/issues"
